--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-PORT = 8080
+API_PORT = 8080
 HOST = '0.0.0.0'
-MONGO_URI= // Your database URI
-TOKEN_KEY= // It can be a random string
+MONGO_URI = // add your mongodb connection string
+TOKEN_KEY = randomstring
