added password reset

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,7 @@ API_PORT = 8080
 HOST = '0.0.0.0'
 MONGO_URI = // add your mongodb connection string
 TOKEN_KEY = randomstring
+EMAIL_HOST = // an example is smtp.gmail.com
+USER = // email address
+PASS = // password
+SERVICE = // an example is gmail
