--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "cors": "^2.8.5",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "chai": "^4.3.4",
